correcoes e implementacoes
